EDA & sqlHelper - sunburst

--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "['constructors', 'races', 'results', 'drivers', 'circuits']"
+       "['circuits', 'drivers', 'constructors', 'results', 'races']"
       ]
      },
      "execution_count": 3,
@@ -854,19 +854,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5c2e79df-b354-4ca9-b387-5a2bf009ff87",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with '/Users/redhawkwax/Desktop/ds_bootcamp/homework/10-Advanced-SQL/sqlalchemy-challenge/.conda/bin/python' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -p /Users/redhawkwax/Desktop/ds_bootcamp/homework/10-Advanced-SQL/sqlalchemy-challenge/.conda ipykernel --update-deps --force-reinstall'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>race</th>\n",
+       "      <th>circuit</th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>date</th>\n",
+       "      <th>round</th>\n",
+       "      <th>constructor</th>\n",
+       "      <th>driver_first</th>\n",
+       "      <th>driver_last</th>\n",
+       "      <th>position</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bahrain Grand Prix</td>\n",
+       "      <td>Bahrain International Circuit</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Red Bull</td>\n",
+       "      <td>Max</td>\n",
+       "      <td>Verstappen</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bahrain Grand Prix</td>\n",
+       "      <td>Bahrain International Circuit</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Red Bull</td>\n",
+       "      <td>Sergio</td>\n",
+       "      <td>Pérez</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bahrain Grand Prix</td>\n",
+       "      <td>Bahrain International Circuit</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ferrari</td>\n",
+       "      <td>Carlos</td>\n",
+       "      <td>Sainz</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bahrain Grand Prix</td>\n",
+       "      <td>Bahrain International Circuit</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ferrari</td>\n",
+       "      <td>Charles</td>\n",
+       "      <td>Leclerc</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bahrain Grand Prix</td>\n",
+       "      <td>Bahrain International Circuit</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>2024-03-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mercedes</td>\n",
+       "      <td>George</td>\n",
+       "      <td>Russell</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15586</th>\n",
+       "      <td>Italian Grand Prix</td>\n",
+       "      <td>Autodromo Nazionale di Monza</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>1950-09-03</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Talbot-Lago</td>\n",
+       "      <td>Louis</td>\n",
+       "      <td>Rosier</td>\n",
+       "      <td>4</td>\n",
+       "      <td>\\N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15587</th>\n",
+       "      <td>Italian Grand Prix</td>\n",
+       "      <td>Autodromo Nazionale di Monza</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>1950-09-03</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Ferrari</td>\n",
+       "      <td>Alberto</td>\n",
+       "      <td>Ascari</td>\n",
+       "      <td>2</td>\n",
+       "      <td>\\N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15588</th>\n",
+       "      <td>Italian Grand Prix</td>\n",
+       "      <td>Autodromo Nazionale di Monza</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>1950-09-03</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Talbot-Lago</td>\n",
+       "      <td>Philippe</td>\n",
+       "      <td>Étancelin</td>\n",
+       "      <td>5</td>\n",
+       "      <td>\\N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15589</th>\n",
+       "      <td>Italian Grand Prix</td>\n",
+       "      <td>Autodromo Nazionale di Monza</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>1950-09-03</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Maserati</td>\n",
+       "      <td>Toulo</td>\n",
+       "      <td>de Graffenried</td>\n",
+       "      <td>6</td>\n",
+       "      <td>\\N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15590</th>\n",
+       "      <td>Italian Grand Prix</td>\n",
+       "      <td>Autodromo Nazionale di Monza</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>1950-09-03</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Ferrari</td>\n",
+       "      <td>Peter</td>\n",
+       "      <td>Whitehead</td>\n",
+       "      <td>7</td>\n",
+       "      <td>\\N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15591 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     race                        circuit  country  year  \\\n",
+       "0      Bahrain Grand Prix  Bahrain International Circuit  Bahrain  2024   \n",
+       "1      Bahrain Grand Prix  Bahrain International Circuit  Bahrain  2024   \n",
+       "2      Bahrain Grand Prix  Bahrain International Circuit  Bahrain  2024   \n",
+       "3      Bahrain Grand Prix  Bahrain International Circuit  Bahrain  2024   \n",
+       "4      Bahrain Grand Prix  Bahrain International Circuit  Bahrain  2024   \n",
+       "...                   ...                            ...      ...   ...   \n",
+       "15586  Italian Grand Prix   Autodromo Nazionale di Monza    Italy  1950   \n",
+       "15587  Italian Grand Prix   Autodromo Nazionale di Monza    Italy  1950   \n",
+       "15588  Italian Grand Prix   Autodromo Nazionale di Monza    Italy  1950   \n",
+       "15589  Italian Grand Prix   Autodromo Nazionale di Monza    Italy  1950   \n",
+       "15590  Italian Grand Prix   Autodromo Nazionale di Monza    Italy  1950   \n",
+       "\n",
+       "             date  round  constructor driver_first     driver_last position  \\\n",
+       "0      2024-03-02      1     Red Bull          Max      Verstappen        1   \n",
+       "1      2024-03-02      1     Red Bull       Sergio           Pérez        2   \n",
+       "2      2024-03-02      1      Ferrari       Carlos           Sainz        3   \n",
+       "3      2024-03-02      1      Ferrari      Charles         Leclerc        4   \n",
+       "4      2024-03-02      1     Mercedes       George         Russell        5   \n",
+       "...           ...    ...          ...          ...             ...      ...   \n",
+       "15586  1950-09-03      7  Talbot-Lago        Louis          Rosier        4   \n",
+       "15587  1950-09-03      7      Ferrari      Alberto          Ascari        2   \n",
+       "15588  1950-09-03      7  Talbot-Lago     Philippe       Étancelin        5   \n",
+       "15589  1950-09-03      7     Maserati        Toulo  de Graffenried        6   \n",
+       "15590  1950-09-03      7      Ferrari        Peter       Whitehead        7   \n",
+       "\n",
+       "      rank  \n",
+       "0        1  \n",
+       "1        4  \n",
+       "2        6  \n",
+       "3        2  \n",
+       "4       12  \n",
+       "...    ...  \n",
+       "15586   \\N  \n",
+       "15587   \\N  \n",
+       "15588   \\N  \n",
+       "15589   \\N  \n",
+       "15590   \\N  \n",
+       "\n",
+       "[15591 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -886,11 +1117,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "adcf1446-307c-4ab6-9f4b-2af767a242f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>constructor</th>\n",
+       "      <th>driver_first</th>\n",
+       "      <th>driver_last</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AFM</td>\n",
+       "      <td>Hans</td>\n",
+       "      <td>von Stuck</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AFM</td>\n",
+       "      <td>Helmut</td>\n",
+       "      <td>Niedermayr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AGS</td>\n",
+       "      <td>Gabriele</td>\n",
+       "      <td>Tarquini</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AGS</td>\n",
+       "      <td>Yannick</td>\n",
+       "      <td>Dalmas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AGS</td>\n",
+       "      <td>Gabriele</td>\n",
+       "      <td>Tarquini</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15586</th>\n",
+       "      <td>Zakspeed</td>\n",
+       "      <td>Huub</td>\n",
+       "      <td>Rothengatter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15587</th>\n",
+       "      <td>Zakspeed</td>\n",
+       "      <td>Jonathan</td>\n",
+       "      <td>Palmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15588</th>\n",
+       "      <td>Zakspeed</td>\n",
+       "      <td>Jonathan</td>\n",
+       "      <td>Palmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15589</th>\n",
+       "      <td>Zakspeed</td>\n",
+       "      <td>Jonathan</td>\n",
+       "      <td>Palmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15590</th>\n",
+       "      <td>Zakspeed</td>\n",
+       "      <td>Jonathan</td>\n",
+       "      <td>Palmer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15591 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      constructor driver_first   driver_last\n",
+       "0             AFM         Hans     von Stuck\n",
+       "1             AFM       Helmut    Niedermayr\n",
+       "2             AGS     Gabriele      Tarquini\n",
+       "3             AGS      Yannick        Dalmas\n",
+       "4             AGS     Gabriele      Tarquini\n",
+       "...           ...          ...           ...\n",
+       "15586    Zakspeed         Huub  Rothengatter\n",
+       "15587    Zakspeed     Jonathan        Palmer\n",
+       "15588    Zakspeed     Jonathan        Palmer\n",
+       "15589    Zakspeed     Jonathan        Palmer\n",
+       "15590    Zakspeed     Jonathan        Palmer\n",
+       "\n",
+       "[15591 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "constructor_query = session.query(Constructors.name, Drivers.forename, Drivers.surname).\\\n",
+    "    filter(Constructors.constructorId == Results.constructorId).\\\n",
+    "    filter(Drivers.driverId == Results.driverId).\\\n",
+    "    order_by(Constructors.name.asc()).all()\n",
+    "\n",
+    "#save query to dataframe\n",
+    "df7 = pd.DataFrame(constructor_query, columns=[\"constructor\", \"driver_first\", \"driver_last\"])\n",
+    "df7"
+   ]
   },
   {
    "cell_type": "code",
@@ -937,7 +1297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
