Tried to update db
Tried to consolidate USA and United States in Circuits table

--- a/EDA/CSV Upload Notebook.ipynb
+++ b/EDA/CSV Upload Notebook.ipynb
@@ -1056,6 +1056,17 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "5f18b3c7-e16b-407d-9731-54afa7c60f28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consolidate United States and USA into 1 name\n",
+    "df_circuits[\"country\"] = df_circuits.country.replace({\"United States\": \"USA\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "08bd7136-6256-4472-bce2-1579a26fafbd",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1164,7 @@
        "4         5  kovalainen     \\N    Heikki  Kovalainen  1981-10-19     Finnish"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3c1410d2-5e12-4c3d-874b-f7cf364fbf9e",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4d27f8a8-d29c-44bf-a46f-898766589ad7",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1312,7 @@
        "4       5  2009      5          4     Spanish Grand Prix  2009-05-10  12:00:00"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "31e439b8-84d0-48c5-b969-d62e9d0de929",
    "metadata": {},
    "outputs": [
@@ -1459,7 +1470,7 @@
        "4            5              5     4.0    58    1         1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "672cb94d-555a-48d5-bf1c-49f8317b6fe0",
    "metadata": {},
    "outputs": [
@@ -1515,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d1d2ad79-32ca-4187-900c-45a454109127",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1548,7 @@
        "Name: count, Length: 109, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "7ad0f3a9-27af-4173-9c3f-d0d8bdc56982",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1641,7 @@
        "4              5     toro_rosso  Toro Rosso     Italian"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "a453ded0-b108-4171-ab6f-f26169c02538",
    "metadata": {},
    "outputs": [
@@ -1658,45 +1669,44 @@
      "data": {
       "text/plain": [
        "country\n",
-       "Argentina         1\n",
-       "Australia         2\n",
-       "Austria           2\n",
-       "Azerbaijan        1\n",
-       "Bahrain           1\n",
-       "Belgium           3\n",
-       "Brazil            2\n",
-       "Canada            3\n",
-       "China             1\n",
-       "France            7\n",
-       "Germany           3\n",
-       "Hungary           1\n",
-       "India             1\n",
-       "Italy             4\n",
-       "Japan             3\n",
-       "Korea             1\n",
-       "Malaysia          1\n",
-       "Mexico            1\n",
-       "Monaco            1\n",
-       "Morocco           1\n",
-       "Netherlands       1\n",
-       "Portugal          4\n",
-       "Qatar             1\n",
-       "Russia            1\n",
-       "Saudi Arabia      1\n",
-       "Singapore         1\n",
-       "South Africa      2\n",
-       "Spain             6\n",
-       "Sweden            1\n",
-       "Switzerland       1\n",
-       "Turkey            1\n",
-       "UAE               1\n",
-       "UK                4\n",
-       "USA              11\n",
-       "United States     1\n",
+       "Argentina        1\n",
+       "Australia        2\n",
+       "Austria          2\n",
+       "Azerbaijan       1\n",
+       "Bahrain          1\n",
+       "Belgium          3\n",
+       "Brazil           2\n",
+       "Canada           3\n",
+       "China            1\n",
+       "France           7\n",
+       "Germany          3\n",
+       "Hungary          1\n",
+       "India            1\n",
+       "Italy            4\n",
+       "Japan            3\n",
+       "Korea            1\n",
+       "Malaysia         1\n",
+       "Mexico           1\n",
+       "Monaco           1\n",
+       "Morocco          1\n",
+       "Netherlands      1\n",
+       "Portugal         4\n",
+       "Qatar            1\n",
+       "Russia           1\n",
+       "Saudi Arabia     1\n",
+       "Singapore        1\n",
+       "South Africa     2\n",
+       "Spain            6\n",
+       "Sweden           1\n",
+       "Switzerland      1\n",
+       "Turkey           1\n",
+       "UAE              1\n",
+       "UK               4\n",
+       "USA             12\n",
        "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "79c8f1f9-6527-4ab6-ab10-c9fd99c8ba14",
    "metadata": {},
    "outputs": [
@@ -1764,7 +1774,7 @@
        "Name: nationality, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "8ba89687-3ab9-4a18-90c5-edc87acaac05",
    "metadata": {},
    "outputs": [],
@@ -1798,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "39deeef8-81fc-4fd7-9061-bc2541c987a9",
    "metadata": {},
    "outputs": [
@@ -1875,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "e575e78b-666f-470e-9c9f-094bfbfa3f2c",
    "metadata": {},
    "outputs": [],
@@ -1888,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "42d93d07-7c9c-4294-9b97-9679352ef82c",
    "metadata": {},
    "outputs": [
@@ -1905,7 +1915,7 @@
        "77"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1937,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "19d0932a-1805-4128-b8f7-cb8b32a9f381",
    "metadata": {},
    "outputs": [
@@ -1954,7 +1964,7 @@
        "859"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "56516006-9e64-4067-ae7e-08d1a476ac78",
    "metadata": {},
    "outputs": [
@@ -2001,7 +2011,7 @@
        "212"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2029,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "d6d01e1e-912c-43e5-be8d-55664754b1dc",
    "metadata": {},
    "outputs": [
@@ -2046,7 +2056,7 @@
        "1125"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2078,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "5fe23588-324a-46c3-9164-76a6b40d80ac",
    "metadata": {},
    "outputs": [
@@ -2095,7 +2105,7 @@
        "15591"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2133,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "9356ec1f-ad19-40d5-b61f-0f86fdc4fe3d",
    "metadata": {},
    "outputs": [],
@@ -2144,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "a0a0c058-aeaa-4977-8dff-7171879b7746",
    "metadata": {},
    "outputs": [],
